static sign-in almost complete

--- a/client/css/sign-in-style.css
+++ b/client/css/sign-in-style.css
@@ -29,6 +29,6 @@ opacity: 0.7;
     left: 0;
     background-size: cover;
     background-position: 50% 50%;
-    background-image: url('http://blog.transfer-iphone-recovery.com/images/photo-with-blur-background.jpg');
+    background-image: url('../img/insurance-company.jpg');
     background-repeat:repeat;
   }
